# guessDepth

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  moge_api.py  moge_client.py  parse_depth.py  pyproject.toml  run_moge_model.py
.claude/: settings.local.json
assets/: depth.exr
